--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -124,4 +124,8 @@
 
     <!-- Whether the OnePlus device has an haptic motor -->
     <java-symbol type="bool" name="config_hasOnePlusHapticMotor" />
+
+    <!-- Post reset runnable for all clients -->
+    <java-symbol type="bool" name="config_fingerprintPostResetRunnableForAllClients" />
+
 </resources>
